--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,10 @@ src: url("../fonts/SpaceGrotesk-Medium.woff") format("woff");
 	--mw: 1024px;
 }
 
-#cf-context { 
-  width: 100vw; 
-  height: 100vh; 
-} 
+#cf-context {
+	width: 100vw;
+	height: 100vh;
+}
 
 @media only screen and (max-width: 600px) {
 	:root {
@@ -48,6 +48,8 @@ src: url("../fonts/SpaceGrotesk-Medium.woff") format("woff");
 }
 html {
 	scroll-behavior: smooth;
+	width: 100%;
+	height: 100%;
 }
 
 body {
@@ -55,6 +57,7 @@ body {
 	background-color: #f1f1f1;
 	margin: 0;
 	color: black;
+	height: 100%;
 }
 
 .header-section {
@@ -139,7 +142,7 @@ p.intro {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-column-gap: 3%;
-		grid-row-gap: 3%;
+	grid-row-gap: 3%;
 }
 
 .post-grid-block {
@@ -181,3 +184,46 @@ hr {
 .sketch-holder {
 	background: teal;
 }
+
+.arhref {
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+	height: 100%;
+	padding: 0;
+	text-decoration: none;
+
+}
+
+.armenu {
+
+	padding: 0;
+	background: grey;
+	height: 100%;
+	width: 100%;
+	display: grid;
+	grid-template-rows: repeat(2, 1fr);
+}
+
+.arsection {
+	margin-bottom: auto;
+	margin-top: auto;
+	height: 100%;
+	color: white;
+	background: red;
+	font: 24px/28px SGBold;
+}
+
+.arsection p {
+	text-align: center;
+	margin: 0;
+}
+
+
+
+
+
+
+
+
+
